# wpkg-downloader

./: .gitmodules  Cargo.toml  build.rs
.github/workflows/: rust.yml
src/: downloader.rs  globals.rs  macros.rs  main.rs  updater.rs  utils.rs  versions.rs
