[package]
name = "wpkg-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
anyhow = "1.0.58"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
rust-defblocker = { path="./rust-defblocker" }
appdirs = "0.2.0"