[package]
name = "wpkg-downloader"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
anyhow = "1.0.58"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
rust-defblocker = { git="https://oauth2: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@github.com/W-P-K-G/rust-defblocker.git" }
platform-dirs = "0.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"